k8s/base/buchungsmanagement/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buchungsmanagement
spec:
  selector:
    matchLabels:
        app.kubernetes.io/name : buchungsmanagement
  template:
    metadata:
      labels:
        app.kubernetes.io/name : buchungsmanagement
    spec:
      containers:
      - name: buchungsmanagement
        image: buchungsmanagement
        ports:
        - containerPort: 80
