k8s/base/buchungsmanagement/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: buchungsmanagement
spec:
  selector:
    app.kubernetes.io/name: buchungsmanagement
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
