k8s/base/buchungsmanagement/http-route-booking.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: buchungsmanagement-booking-route
spec:
  parentRefs:
    - name: booking-gateway
#  hostnames:
#    - "foo.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /booking
      backendRefs:
        - name: buchungsmanagement
          port: 80
