k8s/base/buchungsmanagement/http-route-home.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: buchungsmanagement-home-route
spec:
  parentRefs:
    - name: booking-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /home
      backendRefs:
        - name: buchungsmanagement
          port: 80
