k8s/base/buchungsmanagement/http-route-rent.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: buchungsmanagement-rent-route
spec:
  parentRefs:
    - name: booking-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /rent
      backendRefs:
        - name: buchungsmanagement
          port: 80
